--- a/index.ipynb
+++ b/index.ipynb
@@ -1414,7 +1414,7 @@
    "outputs": [],
    "source": [
     "def slope(x_values, y_values):\n",
-    "    sorted\n",
+    "    sorted_points(x_val)\n",
     "    "
    ]
   },
