Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1415,6 +1415,7 @@
    "source": [
     "def slope(x_values, y_values):\n",
     "    ordered_points = sorted_points(x_values, y_values)\n",
+    "    min_point =\n",
     "    \n",
     "    "
    ]
