--- a/index.ipynb
+++ b/index.ipynb
@@ -1415,7 +1415,7 @@
    "source": [
     "def slope(x_values, y_values):\n",
     "    ordered_points = sorted_points(x_values, y_values)\n",
-    "    min_point =\n",
+    "    min_point = min(ordered_points)\n",
     "    \n",
     "    "
    ]
