--- a/index.ipynb
+++ b/index.ipynb
@@ -1416,6 +1416,7 @@
     "def slope(x_values, y_values):\n",
     "    ordered_points = sorted_points(x_values, y_values)\n",
     "    min_point = min(ordered_points)\n",
+    "    max_point = max(ordered_point)\n",
     "    \n",
     "    "
    ]
