Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1417,7 +1417,7 @@
     "    ordered_points = sorted_points(x_values, y_values)\n",
     "    min_point = min(ordered_points)\n",
     "    max_point = max(ordered_points)\n",
-    "    d\n",
+    "    delta_x = \n",
     "    \n",
     "    "
    ]
