--- a/index.ipynb
+++ b/index.ipynb
@@ -1417,7 +1417,8 @@
     "    ordered_points = sorted_points(x_values, y_values)\n",
     "    min_point = min(ordered_points)\n",
     "    max_point = max(ordered_points)\n",
-    "    delta_x = max_point[1]\n",
+    "    delta_x = max_point[1] - min_point[1]\n",
+    "    delta\n",
     "    \n",
     "    "
    ]
