Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1418,7 +1418,7 @@
     "    min_point = min(ordered_points)\n",
     "    max_point = max(ordered_points)\n",
     "    delta_x = max_point[1] - min_point[1]\n",
-    "    delta\n",
+    "    delta_y = max_point\n",
     "    \n",
     "    "
    ]
