Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1457,8 +1457,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def y_intercept(x_values, y_values, m = slope(x_values, y_val)):\n",
-    "    line_slope = slope(x_values, y_values)"
+    "def y_intercept(x_values, y_values, m = slope(x_values, y_values)):\n",
+    "    ordered_"
    ]
   },
   {
