Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1458,7 +1458,8 @@
    "outputs": [],
    "source": [
     "def y_intercept(x_values, y_values, m = slope(x_values, y_values)):\n",
-    "    ordered_"
+    "    ordered_points = sorted_points(x_values, y_values)\n",
+    "    "
    ]
   },
   {
