--- a/index.ipynb
+++ b/index.ipynb
@@ -1459,7 +1459,8 @@
    "source": [
     "def y_intercept(x_values, y_values, m = slope(x_values, y_values)):\n",
     "    ordered_points = sorted_points(x_values, y_values)\n",
-    "    max_point = max(ordered_points)"
+    "    max_point = max(ordered_points)\n",
+    "    y_interc"
    ]
   },
   {
