Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1460,7 +1460,7 @@
     "def y_intercept(x_values, y_values, m = slope(x_values, y_values)):\n",
     "    ordered_points = sorted_points(x_values, y_values)\n",
     "    max_point = max(ordered_points)\n",
-    "    y_interc"
+    "    y_intercept = max_point[1] - max"
    ]
   },
   {
