--- a/index.ipynb
+++ b/index.ipynb
@@ -1460,7 +1460,8 @@
     "def y_intercept(x_values, y_values, m = slope(x_values, y_values)):\n",
     "    ordered_points = sorted_points(x_values, y_values)\n",
     "    max_point = max(ordered_points)\n",
-    "    y_intercept = max_point[1] - max"
+    "    y_intercept = max_point[1] - max_point[0]*m\n",
+    "    return y_intercet"
    ]
   },
   {
