--- a/index.ipynb
+++ b/index.ipynb
@@ -1466,7 +1466,8 @@
     }
    ],
    "source": [
-    "def y_intercept(x_values, y_values, m = slope(x_values, y_values):\n",
+    "def y_intercept(x_values, y_values):\n",
+    "    m = \n",
     "    ordered_points = sorted_points(x_values, y_values)\n",
     "    max_point = max(ordered_points)\n",
     "    y_intercept = max_point[1] - max_point[0]*m\n",
