--- a/index.ipynb
+++ b/index.ipynb
@@ -1521,7 +1521,8 @@
    "outputs": [],
    "source": [
     "def build_starting_line(x_values, y_values):\n",
-    "    m"
+    "    m = slope(x_values, y_values)\n",
+    "    b = "
    ]
   },
   {
