--- a/index.ipynb
+++ b/index.ipynb
@@ -1523,7 +1523,7 @@
     "def build_starting_line(x_values, y_values):\n",
     "    m = slope(x_values, y_values)\n",
     "    b = y_intercept(x_values, y_values)\n",
-    "    equa"
+    "    equation = {'m':m, 'b'}"
    ]
   },
   {
