--- a/index.ipynb
+++ b/index.ipynb
@@ -1516,21 +1516,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "def build_starting_line(x_values, y_values):\n",
     "    m = slope(x_values, y_values)\n",
     "    b = y_intercept(x_values, y_values)\n",
-    "    equation = {'m':m, 'b'}"
+    "    equation = {'m':m, 'b':b}\n",
+    "    return equation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'m': 1.725, 'b': 10.0}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "build_starting_line([0, 200, 400], [10, 400, 700]) # {'b': 10.0, 'm': 1.725}"
    ]
